--- a/package.json
+++ b/package.json
@@ -4,5 +4,12 @@
   "description": "",
   "scripts": {},
   "author": "Yevgeny Yakushev <e.v.yakushev@gmail.com>",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "cheerio": "^1.0.0-rc.2",
+    "q": "^1.5.1",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.2",
+    "xml2js": "^0.4.19"
+  }
 }
