--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "license": "ISC",
   "devDependencies": {
     "cheerio": "^1.0.0-rc.2",
+    "mongodb": "^3.1.10",
+    "mongoose": "^5.4.1",
     "q": "^1.5.1",
     "request": "^2.88.0",
     "request-promise": "^4.2.2",
