--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "ISC",
   "devDependencies": {
     "cheerio": "^1.0.0-rc.2",
+    "express": "^4.16.4",
     "mongodb": "^3.1.10",
     "mongoose": "^5.4.1",
     "q": "^1.5.1",
