--- a/client/package.json
+++ b/client/package.json
@@ -21,8 +21,10 @@
   },
   "dependencies": {
     "css-loader": "^0.28.9",
+    "node-sass": "^4.11.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.19.1"
   }
 }
