--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   "license": "ISC",
   "devDependencies": {
     "cheerio": "^1.0.0-rc.2",
+    "elasticsearch": "^15.3.0",
     "express": "^4.16.4",
     "mongodb": "^3.1.10",
     "mongoose": "^5.4.1",
     "q": "^1.5.1",
     "request": "^2.88.0",
     "request-promise": "^4.2.2",
-    "xml2js": "^0.4.19",
-    "require-all": "^3.0.0"
+    "require-all": "^3.0.0",
+    "xml2js": "^0.4.19"
   }
 }
