--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   },
   "author": "Yevgeny Yakushev <e.v.yakushev@gmail.com>",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
     "cheerio": "^1.0.0-rc.2",
     "elasticsearch": "^15.3.0",
+    "express": "^4.16.4",
     "mongodb": "^3.1.10",
     "mongoose": "^5.4.1",
     "q": "^1.5.1",
@@ -20,8 +21,5 @@
     "request-promise": "^4.2.2",
     "require-all": "^3.0.0",
     "xml2js": "^0.4.19"
-  },
-  "dependencies": {
-    "express": "^4.16.4"
   }
 }
