--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.4",
     "mongodb": "^3.1.10",
     "mongoose": "^5.4.1",
+    "node-telegram-bot-api": "^0.30.0",
     "q": "^1.5.1",
     "request": "^2.88.0",
     "request-promise": "^4.2.2",
