--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
+    "ejs": "^2.6.1",
     "elasticsearch": "^15.3.0",
     "express": "^4.16.4",
+    "html-pdf": "^2.2.0",
     "mongodb": "^3.1.10",
     "mongoose": "^5.4.1",
     "node-telegram-bot-api": "^0.30.0",
