--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "css-loader": "^0.28.9",
     "node-sass": "^4.11.0",
     "react": "^16.0.0",
+    "react-clipboard.js": "^2.0.7",
     "react-dom": "^16.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.19.1"
