--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "elasticsearch": "^15.3.0",
     "express": "^4.16.4",
     "html-pdf": "^2.2.0",
+    "moment": "^2.24.0",
     "mongodb": "^3.1.10",
     "mongoose": "^5.4.1",
     "node-telegram-bot-api": "^0.30.0",
