--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,6 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.5.0",
-    "webpack": "^3.0.0",
     "webpack-dev-server": "^2.9.1"
   },
   "dependencies": {
@@ -27,6 +26,7 @@
     "react-clipboard.js": "^2.0.7",
     "react-dom": "^16.0.0",
     "sass-loader": "^7.1.0",
-    "style-loader": "^0.19.1"
+    "style-loader": "^0.19.1",
+    "webpack": "^3.0.0"
   }
 }
