--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ejs": "^2.6.1",
     "elasticsearch": "^15.3.0",
     "express": "^4.16.4",
+    "helmet": "^3.18.0",
     "html-pdf": "^2.2.0",
     "moment": "^2.24.0",
     "mongodb": "^3.1.10",
