--- a/client/package.json
+++ b/client/package.json
@@ -11,15 +11,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "webpack-dev-server": "^2.9.1"
+    "compression-webpack-plugin": "^2.0.0",
+    "webpack-cli": "^3.3.2"
   },
   "dependencies": {
-    "babel-core": "^6.13.2",
-    "babel-loader": "^6.2.4",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-react": "^6.11.1",
+    "@babel/core": "^7.4.4",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.5",
     "babel-preset-react-hmre": "^1.1.1",
-    "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.28.9",
     "node-sass": "^4.11.0",
     "react": "^16.0.0",
@@ -27,6 +28,7 @@
     "react-dom": "^16.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.19.1",
-    "webpack": "^3.0.0"
+    "uglifyjs-webpack-plugin": "^2.1.2",
+    "webpack": "^4.31.0"
   }
 }
