--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "build": "npm ci && cd client && npm ci && npm run build",
+    "build": "yarn && cd client && yarn && yarn build",
     "start": "node .",
     "crawl": "node ./lib/crawler/index.test.js",
     "reindex": "node ./db/courses/clients/elasticsearch"
