--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,6 @@
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "compression-webpack-plugin": "^2.0.0",
-    "webpack-cli": "^3.3.2"
-  },
   "dependencies": {
     "@babel/core": "^7.4.4",
     "@babel/plugin-proposal-class-properties": "^7.4.4",
@@ -21,6 +17,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
     "babel-preset-react-hmre": "^1.1.1",
+    "compression-webpack-plugin": "^2.0.0",
     "css-loader": "^0.28.9",
     "node-sass": "^4.11.0",
     "react": "^16.0.0",
@@ -29,6 +26,7 @@
     "sass-loader": "^7.1.0",
     "style-loader": "^0.19.1",
     "uglifyjs-webpack-plugin": "^2.1.2",
-    "webpack": "^4.31.0"
+    "webpack": "^4.31.0",
+    "webpack-cli": "^3.3.2"
   }
 }
