--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
     "require-all": "^3.0.0",
     "sitemapper": "^2.2.0",
     "xml2js": "^0.4.19"
+  },
+  "devDependencies": {
+    "prettier": "^1.17.0",
+    "prettierrc": "^0.0.0-5"
   }
 }
