--- a/.prettierrc
+++ b/.prettierrc
@@ -4,6 +4,7 @@
   "endOfLine": "lf",
   "useTabs": false,
   "tabWidth": 2,
+  "semi": true,
   "singleQuote": true,
   "trailingComma": "es5",
   "arrowParens": "always"
